Improve error message when subclassing non-Class

Fixes [Bug #14726]